# pixy

./: .Rhistory  .ci.sh  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  build.sh  create_release.sh  environment.yaml  meta.yaml  pixy.ipynb  pixy.py  pixy_out.txt  pyVCF_test.ipynb  pyproject.toml  scikit_allel_test.ipynb  setup.py  simulate_data.sh  vcf_blank.vcf
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-help.md  installation-help.md
.github/workflows/: python_package.yml
.ipynb_checkpoints/: check_sample_sexes-checkpoint.R  msprime_simulate_data-checkpoint.ipynb  pixy-checkpoint.ipynb  pixy-checkpoint.py  pyVCF_test-checkpoint.ipynb  simulate_data-checkpoint.sh
conda.recipe/: LICENSE.txt  build.sh  meta.yaml
data/: An1000g_Samples - Sheet3.csv  meta_join.csv  samples.meta.txt
data/msprime/: test_vcf_invar.vcf  test_vcf_var_only.vcf
data/msprime_sim/: sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_1.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_2.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_3.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_4.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_5.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_6.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_7.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_8.vcf  sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_9.vcf
data/msprime_sim/.ipynb_checkpoints/: sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_0-checkpoint.vcf
data/msprime_sim_invar/: sim_dat_Ne=1.0e+06_mu=1e-08_samples=100_sites=10000_1_invar.vcf
data/vcf/: test.vcf.gz.tbi
debug/: debug_template.sh
docs/: about.rst  arguments.rst  changelog.rst  companions.rst  conf.py  contributing.rst  example_data.rst  examples.rst  index.rst  installation.rst  output.rst  pixy_logo.psd  plotting.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: arguments.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  arguments.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/example_data/: dmel_2pop.vcf.gz.tbi  dmel_populations.txt
docs/generating_invar/: generating_invar.rst
docs/guide/: pixy_guide.rst
docs/invar/: allsitesQuickstart.rst  freebayes.rst  gatk.rst
docs/quickstart/: quickstart.rst
output/: pixy_out_BFS_KES_dxy.txt  pixy_out_BFS_pi.txt  pixy_out_KES_pi.txt
pixy/: __main__.py  agg.py  args_validation.py  calc.py  calc_gl.py  core.py  enums.py  gvcf.py  models.py  pixy_functions.py  sprite.py  wisp.py
pixy.build/: CompiledAsyncgenType.c  CompiledCellType.c  CompiledCodeHelpers.c  CompiledCoroutineType.c  CompiledFrameType.c  CompiledFunctionType.c  CompiledGeneratorType.c  CompiledMethodType.c  InspectPatcher.c  MainProgram.c  MetaPathBasedLoader.c
pixy/__pycache__/: core.cpython-38.pyc.139847209597168  core.cpython-38.pyc.140106275211504  core.cpython-38.pyc.140122431351024  core.cpython-38.pyc.140542084729072  core.cpython-38.pyc.140709041779536
pixy/stats/: summary.py
script_back/: inject_invariant_sites.sh  meta_old.yaml  msprime_simulate_data.ipynb  msprime_test_data-Copy1.ipynb  pixy_logo.psd  scikit_allel_test.ipynb
script_back/.ipynb_checkpoints/: msprime_simulate_data-checkpoint.ipynb  msprime_test_data-Copy1-checkpoint.ipynb  scikit_allel_test-checkpoint.ipynb
scripts/: build_with_pyinstaller.sh  inject_invariant_sites.sh  inject_invariant_sites_fast.sh  msprime_simulate_data.py
src/: pixy.py  setup.py
stubs/: allel.pyi
tests/: conftest.py  test_calc.py  test_calc_gl.py  test_core.py  test_gvcf.py  test_sprite.py  test_wisp.py
tests/args_validation/: test_args_validation.py
tests/main/: test_main.py
tests/main/data/: ag1000_pixy_gvcf_test.vcf.gz.tbi  test_regions_1.bed  (+16 more)
tests/stats/: test_models.py
(+45 files in other folders)
